--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "three": "^0.111.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "autoprefixer": "^9.7.2",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
     "eslint-config-react-app": "^5.2.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-use-dark-mode": "^1.1.2",
     "husky": "^4.2.1",
@@ -60,7 +62,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged --pattern \"**/*.{js,jsx,json,md}\""
+      "pre-commit": "pretty-quick --staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "repository": {
