--- a/devops/nginx.root.conf
+++ b/devops/nginx.root.conf
@@ -5,7 +5,7 @@ include /etc/nginx/modules-enabled/50-mod-http-lua.conf;
 user  nginx;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log warn;
+error_log off;
 pid        /var/run/nginx.pid;
 
 
@@ -23,8 +23,8 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
-
+     # access_log  /var/log/nginx/access.log  main;
+    access_log off;
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
