feat: query api

--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: "12.x"
           registry-url: https://registry.npmjs.org/
       - name: Build project
-        run: npm i && npm run build
+        run: env GATSBY_API_URL=${{secrets.API}} npm i && npm run build
       - name: Build and tag image
         run: docker build -t "docker.pkg.github.com/$GITHUB_REPOSITORY/kevensaldana.com:latest" .
       - name: Docker login
