--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-tagmanager": "^2.1.25",
     "gatsby-plugin-manifest": "^2.2.25",
-    "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-nprogress": "^2.1.19",
     "gatsby-plugin-offline": "^3.0.17",
     "gatsby-plugin-postcss": "^2.1.15",
@@ -32,26 +31,30 @@
     "react-helmet": "^5.2.1",
     "react-intersection-observer": "^8.25.2",
     "scrollmagic": "^2.0.7",
+    "tailwindcss": "^1.2.0",
     "three": "^0.111.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "autoprefixer": "^9.7.2",
+    "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "gatsby-plugin-mdx": "^1.0.73",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-use-dark-mode": "^1.1.2",
+    "gatsby-remark-images": "^3.1.44",
     "gatsby-source-github-api": "^0.1.5",
+    "gatsby-transformer-remark": "^2.6.53",
     "husky": "^4.2.1",
     "postcss-custom-properties": "^9.0.2",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.1",
     "postcss-nested-ancestors": "^2.0.0",
     "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1",
-    "tailwindcss": "^1.1.3"
+    "pretty-quick": "^2.0.1"
   },
   "keywords": [
     "gatsby"
@@ -59,7 +62,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "env GATSBY_API_URL=123 gatsby develop",
+    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
