--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-prismjs": "^3.3.31",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-json": "^2.2.25",
     "gatsby-transformer-sharp": "^2.3.1",
     "gsap": "^3.0.1",
     "hammerjs": "^2.0.8",
     "node-sass": "^4.13.0",
+    "prism-themes": "^1.3.0",
+    "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -46,6 +49,7 @@
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-use-dark-mode": "^1.1.2",
     "gatsby-remark-images": "^3.1.44",
+    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-source-github-api": "^0.1.5",
     "gatsby-transformer-remark": "^2.6.53",
     "husky": "^4.2.1",
