--- a/data/site/projects.json
+++ b/data/site/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "title": "Cocos y Lucas",
+    "title": "Web Tipo de Cambio",
     "description": "Web gratuita donde cambiar dólares en el Perú con el respaldo del banco para brindar mayor seguridad.",
     "image": "./images/projects/cocoslucas.png"
   },
