feat: adding prismjs in code

--- a/package.json
+++ b/package.json
@@ -19,13 +19,19 @@
     "gatsby-plugin-react-svg": "^2.1.2",
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-copy-linked-files": "^2.1.37",
+    "gatsby-remark-embedder": "^1.11.2",
     "gatsby-remark-prismjs": "^3.3.31",
+    "gatsby-remark-responsive-iframe": "^2.2.32",
+    "gatsby-remark-smartypants": "^2.1.21",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-json": "^2.2.25",
     "gatsby-transformer-sharp": "^2.3.1",
     "gsap": "^3.0.1",
     "hammerjs": "^2.0.8",
+    "mdx-utils": "^0.2.0",
     "node-sass": "^4.13.0",
+    "prism-react-renderer": "^1.0.2",
     "prism-themes": "^1.3.0",
     "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
