--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/react": "^1.5.5",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
+    "gatsby-plugin-disqus": "^1.1.4",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-tagmanager": "^2.1.25",
     "gatsby-plugin-manifest": "^2.2.25",
