--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "gatsby-plugin-postcss": "^2.1.15",
     "gatsby-plugin-react-helmet": "^3.1.13",
     "gatsby-plugin-react-svg": "^2.1.2",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.2.34",
+    "gatsby-plugin-sitemap": "^2.2.27",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^2.1.37",
     "gatsby-remark-embedder": "^1.11.2",
