--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-helmet": "^5.2.1",
     "react-intersection-observer": "^8.25.2",
     "scrollmagic": "^2.0.7",
+    "styled-components": "^5.0.1",
     "tailwindcss": "^1.2.0",
     "three": "^0.111.0"
   },
