--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-intersection-observer": "^8.25.2",
+    "rxjs": "^6.5.4",
+    "scroll-into-view": "^1.14.1",
     "scrollmagic": "^2.0.7",
     "styled-components": "^5.0.1",
     "tailwindcss": "^1.2.0",
