chore: update cylm

--- a/data/site/projects.json
+++ b/data/site/projects.json
@@ -2,7 +2,7 @@
   {
     "title": "Web Exchange Rate",
     "description": "Website to change dollars with bank support to provide more security.",
-    "image": "./images/projects/cocoslucas.png"
+    "image": "./images/projects/cocoslucas.jpg"
   },
   {
     "title": "Home Banking Business",
